--- a/docker-monitor/docker-compose.yml
+++ b/docker-monitor/docker-compose.yml
@@ -1,16 +1,31 @@
 version: '3.8'
 
 services:
-  app:
+  app1:
+    image: docker-monitor/app_image:A
     build:
       context: ./app
       dockerfile: Dockerfile
-    container_name: app_container
+    container_name: app_1
     restart: always
     ports:
-      - "8080:8080"
-    environment:
-      - NODE_ENV=production
+      - "8081:8080"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      interval: 1m
+      timeout: 10s
+      retries: 3
+      start_period: 30s
+
+  app2:
+    image: docker-monitor/app_image:B1
+    build:
+      context: ./app
+      dockerfile: Dockerfile
+    container_name: app_2
+    restart: always
+    ports:
+      - "8082:8080"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
       interval: 1m
@@ -19,6 +34,7 @@ services:
       start_period: 30s
 
   monitor:
+    image: docker-monitor/monitor_image:latest
     build:
       context: ./monitor
       dockerfile: Dockerfile
@@ -28,7 +44,3 @@ services:
     working_dir: /app
     command: ["npm", "start"]
     restart: always
-    environment:
-      - NODE_ENV=production
-    depends_on:
-      - app
